--- a/index.html
+++ b/index.html
@@ -675,15 +675,15 @@
             <div class="row">
               <div class="col-md-5 info">
                 <i class="ion-ios-location-outline"></i>
-                <p>A108 Adam Street, NY 535022</p>
+                <p>Surabaya City, East Java</p>
               </div>
               <div class="col-md-4 info">
                 <i class="ion-ios-email-outline"></i>
-                <p>info@example.com</p>
+                <p>info@primakom.co.id</p>
               </div>
               <div class="col-md-3 info">
                 <i class="ion-ios-telephone-outline"></i>
-                <p>+1 5589 55488 55</p>
+                <p>031-99535177</p>
               </div>
             </div>
 
@@ -748,11 +748,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Surabaya City <br>
+              East Java<br>
+              Indonesia <br>
+              <strong>Phone:</strong> 031-99535177<br>
+              <strong>Email:</strong> info@primakom.co.id<br>
             </p>
 
             <div class="social-links">
