--- a/Blog.html
+++ b/Blog.html
@@ -78,7 +78,7 @@
                       <h4><a href="#">Photo</a></h4>
                       <p>Photo 1</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -91,7 +91,7 @@
                       <h4><a href="#">Destination</a></h4>
                       <p>Destination 1</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -104,7 +104,7 @@
                       <h4><a href="#">Food</a></h4>
                       <p>Food 1</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -117,7 +117,7 @@
                       <h4><a href="#">Travel</a></h4>
                       <p>Travel 1</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -130,7 +130,7 @@
                       <h4><a href="#">Photo</a></h4>
                       <p>Photo 2</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -143,7 +143,7 @@
                       <h4><a href="#">Landscape</a></h4>
                       <p>Landscape 1</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -156,7 +156,7 @@
                       <h4><a href="#">Nature</a></h4>
                       <p>Nature 1</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -169,7 +169,7 @@
                       <h4><a href="#">Landscape</a></h4>
                       <p>Landscape 2</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -182,7 +182,7 @@
                       <h4><a href="#">Nature</a></h4>
                       <p>Nature 2</p>
                       <div>
-                        <a href="#" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
+                        <a href="single-blog.html" class="link-details" title="Read more"><i class="ion ion-android-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -202,7 +202,7 @@
                     <li>
                       <div>
                         <img style="width: 100px; float: left; margin-right: 20px;" src="img/portfolio/card2.jpg" alt="">
-                        <h5>Positive Thinking</h5>
+                        <h5>Space The Final Frontier</h5>
                         <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
                       </div>
                     </li>
@@ -210,7 +210,7 @@
                     <li>
                       <div>
                         <img style="width: 100px; float: left; margin-right: 20px;" src="img/portfolio/card3.jpg" alt="">
-                        <h5>Positive Thinking</h5>
+                        <h5>The Amazing Hubble</h5>
                         <p> Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
                       </div>
                     </li>
@@ -223,15 +223,15 @@
                   <hr>
                   <ul style="list-style: none;">
                     <li>
-                      <a href="#">This is Just Going To Be Another Test Post</a>
+                      <a href="#">How to Look Up</a>
                     </li>
                     <hr>
                     <li>
-                      <a href="#">This is Just Going To Be Another Test Post</a>
+                      <a href="#">Compatible Inkjet Cartridge</a>
                     </li>
                     <hr>
                     <li>
-                      <a href="#">This is Just Going To Be Another Test Post</a>
+                      <a href="#">Treat That Oral Thrush Now</a>
                     </li>
                     <hr>
                     <li>
@@ -246,27 +246,27 @@
                   <hr>
                   <ul style="list-style: none;">
                     <li>
-                      <a href="#">Frans Joe</a>
+                      <a href="#">Benny Parker</a>
                       <br>
-                      <small class="date">July 30, 2020</small>
+                      <small class="date">October 16, 2015</small>
                     </li>
                     <hr>
                     <li>
-                      <a href="#">Frans Joe</a>
+                      <a href="#">Benny Parker</a>
                       <br>
-                      <small class="date">July 30, 2020</small>
+                      <small class="date">October 16, 2015</small>
                     </li>
                     <hr>
                     <li>
-                      <a href="#">Frans Joe</a>
+                      <a href="#">Benny Parker</a>
                       <br>
-                      <small class="date">July 30, 2020</small>
+                      <small class="date">October 16, 2015</small>
                     </li>
                     <hr>
                     <li>
-                      <a href="#">Frans Joe</a>
+                      <a href="#">Benny Parker</a>
                       <br>
-                      <small class="date">July 30, 2020</small>
+                      <small class="date">October 16, 2015</small>
                     </li>
                   </ul>
                 </div>
